added prompt setting for /chatgpt